URLS and home page logic implemented

--- a/tasty_recypes/templates/profile/details-profile.html
+++ b/tasty_recypes/templates/profile/details-profile.html
@@ -34,8 +34,8 @@
 
                 <!-- Edit/Delete buttons -->
                 <div class="buttons">
-                    <a href="#" class="edit-button">Edit</a>
-                    <a href="#" class="delete-button">Delete</a>
+                    <a href="{% url 'profile_edit' %}" class="edit-button">Edit</a>
+                    <a href="{% url 'profile_delete' %}" class="delete-button">Delete</a>
                 </div>
             </div>
         </div>
