--- a/tasty_recypes/templates/recipe/details-recipe.html
+++ b/tasty_recypes/templates/recipe/details-recipe.html
@@ -51,8 +51,8 @@
 
             <!-- Edit/Delete buttons -->
             <div class="buttons">
-                <a href="#" class="edit-button">Edit</a>
-                <a href="#" class="delete-button">Delete</a>
+                <a href="{% url 'recipe_edit' %}" class="edit-button">Edit</a>
+                <a href="{% url 'recipe_delete' %}" class="delete-button">Delete</a>
             </div>
         </div>
     </section>
