--- a/tasty_recypes/templates/base.html
+++ b/tasty_recypes/templates/base.html
@@ -1,4 +1,6 @@
 {% load static %}
+{% load user_profile %}
+
 
 <!DOCTYPE html>
 <html lang="en">
@@ -13,21 +15,24 @@
 <div id="box">
     <header>
         <!-- Navigation Bar -->
-        <h1><a class="index-navigation" href="#">Tasty Recipes</a></h1>
+        <h1><a class="index-navigation" href="{% url 'home' %}">Tasty Recipes</a></h1>
         <nav>
-            <!-- if the user has not created a profile -->
-            <a href="#">Create Profile</a>
+            {% user_profile as user %}
+            {% if not user %}
+                <!-- if the user has not created a profile -->
+                <a href="{% url 'profile_create' %}">Create Profile</a>
+            {% endif %}
+                <!-- if the user has created a profile -->
+                <a href="{% url 'catalogue' %}">Catalogue</a>
+                <a href="{% url 'recipe_create' %}">Create Recipe</a>
+                <a href="{% url 'profile_details' %}">Profile</a>
 
-            <!-- if the user has created a profile -->
-            <a href="#">Catalogue</a>
-            <a href="#">Create Recipe</a>
-            <a href="#">Profile</a>
         </nav>
     </header>
 
     {% block content %}
     {% endblock %}
-    
+
     <!-- footer -->
     <footer>&copy;SoftUni Team 2024. All rights reserved.</footer>
 </div>
