--- a/tasty_recypes/templates/base.html
+++ b/tasty_recypes/templates/base.html
@@ -21,11 +21,12 @@
             {% if not user %}
                 <!-- if the user has not created a profile -->
                 <a href="{% url 'profile_create' %}">Create Profile</a>
-            {% endif %}
+            {% else %}
                 <!-- if the user has created a profile -->
                 <a href="{% url 'catalogue' %}">Catalogue</a>
                 <a href="{% url 'recipe_create' %}">Create Recipe</a>
                 <a href="{% url 'profile_details' %}">Profile</a>
+            {% endif %}
 
         </nav>
     </header>
