--- a/tasty_recypes/templates/recipe/catalogue.html
+++ b/tasty_recypes/templates/recipe/catalogue.html
@@ -2,84 +2,45 @@
 {% load static %}
 
 {% block content %}
+    {% if not recipe_list %}
+        <!-- Display paragraph: If there are no recipes yet-->
+        <p class="no-articles">There are currently no recipes available.</p>
+    {% else %}
+        <!-- Display a card with information about each recipe (if any)-->
+        {% for recipe in recipe_list %}
+            <section id="catalogue">
+            <!-- first recipe-->
+            <div class="recipe-card">
+                <div class="image-wrap">
+                    <!-- recipe image -->
 
-    <!-- Display paragraph: If there are no recipes yet-->
-    <p class="no-articles">There are currently no recipes available.</p>
+                    <!-- if there is no image url provided, display the default recipe image -->
 
-    <!-- Display a card with information about each recipe (if any)-->
-    <section id="catalogue">
-        <!-- first recipe-->
-        <div class="recipe-card">
-            <div class="image-wrap">
-                <!-- recipe image -->
-                <!-- if there is no image url provided, display the default recipe image -->
-
-                <img
-                        class="recipe-img"
-                        src="https://cdn.pixabay.com/photo/2016/12/27/21/22/salad-1934944_1280.jpg"
-                        alt="recipe image"
-                />
+                    <img
+                            class="recipe-img"
+                            {% if not recipe.image_url %}
+                            src="https://cdn.pixabay.com/photo/2016/12/27/21/22/salad-1934944_1280.jpg"
+                            {% else %}
+                            src="{{ recipe.image_url }}"
+                            {% endif %}
+                            alt="recipe image"
+                    />
+                </div>
+                <!-- recipe title -->
+                <h3>{{ recipe.title }}</h3>
+                <!-- recipe cooking time -->
+                <h1>Cooking time: {{ recipe.cooking_time }}</h1>
+                <!-- recipe instructions -->
+                <h1>{{ recipe.instructions }}</h1>
+                <div class="details-buttons">
+                    <!-- recipe details button -->
+                    <a href="{% url 'recipe_details' recipe.pk %}" class="details-btn">Details</a>
+                </div>
             </div>
-            <!-- recipe title -->
-            <h3>Caprese Salad</h3>
-            <!-- recipe cooking time -->
-            <h1>Cooking time: 10min.</h1>
-            <!-- recipe instructions -->
-            <h1>Slice the tomatoes and mozzarella …</h1>
-            <div class="details-buttons">
-                <!-- recipe details button -->
-                <a href="" class="details-btn">Details</a>
-            </div>
-        </div>
+        {% endfor %}
+    {% endif %}
 
-        <!-- second recipe-->
-        <div class="recipe-card">
-            <div class="image-wrap">
-                <!-- recipe image -->
-                <!-- if there is no image url provided, display the default recipe image -->
+</section>
 
-                <img
-                        class="recipe-img"
-                        src="{% static 'images/default_recipe_img.png' %}"
-                        alt="recipe image"
-                />
-            </div>
-            <!-- recipe title -->
-            <h3>Pasta Aglio e Olio</h3>
-            <!-- recipe cooking time -->
-            <h1>Cooking time: 25min.</h1>
-            <!-- recipe instructions -->
-            <h1>Cook spaghetti according to packag…</h1>
-            <div class="details-buttons">
-                <!-- recipe details button -->
-                <a href="" class="details-btn">Details</a>
-            </div>
-        </div>
-
-        <!-- third recipe-->
-        <div class="recipe-card">
-            <div class="image-wrap">
-                <!-- recipe image -->
-                <!-- if there is no image url provided, display the default recipe image -->
-
-                <img
-                        class="recipe-img"
-                        src="{% static 'images/default_recipe_img.png' %}"
-                        alt="recipe image"
-                />
-            </div>
-            <!-- recipe title -->
-            <h3>Avocado Toast</h3>
-            <!-- recipe cooking time -->
-            <h1>Cooking time: 12min.</h1>
-            <!-- recipe instructions -->
-            <h1>Toast slices of whole grain bread …</h1>
-            <div class="details-buttons">
-                <!-- recipe details button -->
-                <a href="" class="details-btn">Details</a>
-            </div>
-        </div>
-    </section>
-    
 {% endblock %}
 
