--- a/tasty_recypes/templates/profile/delete-profile.html
+++ b/tasty_recypes/templates/profile/delete-profile.html
@@ -6,12 +6,14 @@
         <div class="container">
             <h1>Are you sure you want to delete your profile?</h1>
             <!-- Delete Profile Form -->
-            <form id="delete">
+            <form id="delete" method="POST">
+                {{ form }}
+                {% csrf_token %}
                 <!-- Confirm Button -->
                 <input class="btn submit" type="submit" value="Yes"/>
             </form>
         </div>
         <!-- End Delete Profile Form -->
     </section>
-    
+
 {% endblock %}
