--- a/tasty_recypes/templates/profile/details-profile.html
+++ b/tasty_recypes/templates/profile/details-profile.html
@@ -15,23 +15,29 @@
 
                 <img
                         class="recipe-img"
+                        {% if profile.chef %}
                         src="{% static 'images/chef_img.png' %}"
+                        {% else %}
+                        src="{% static 'images/no_chef_img.png' %}"
+                        {% endif %}
                         alt="profile-image"
                 />
 
                 <!-- profile full name -->
-                <h1>Fname Lname</h1>
+                <h1>{{ profile.first_name }} {{ profile.last_name }}</h1>
 
                 <!-- profile nickname -->
-                <p class="description">Nickname: testuser</p>
+                <p class="description">Nickname: {{ profile.nickname }}</p>
 
                 <!-- profile bio -->
                 <!-- if no profile bio - display 'N/A' -->
-
-                <p class="description">Bio: N/A</p>
-
+                {% if not profile.bio %}
+                    <p class="description">Bio: N/A</p>
+                {% else %}
+                    <p class="description">Bio: {{ profile.bio }}</p>
+                {% endif %}
                 <!-- total number of published recipes -->
-                <p class="description">Published recipes: 3</p>
+                <p class="description">Published recipes: {{ profile.recipes.count }}</p>
 
                 <!-- Edit/Delete buttons -->
                 <div class="buttons">
@@ -41,5 +47,5 @@
             </div>
         </div>
     </section>
-    
+
 {% endblock %}
