Home Page logic implemented

--- a/RegularExam/templates/base.html
+++ b/RegularExam/templates/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load get_user %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -21,16 +22,19 @@
 
         <nav>
             <!-- If there is an author's profile -->
+            {% get_user as profile %}
+            {% if profile %}
             <div class="user">
                 <a href="{% url 'dashboard' %}">Dashboard</a>
                 <a href="{% url 'create_post' %}">New Post</a>
                 <a href="{% url 'author_details' %}">Author's Profile</a>
             </div>
-
             <!-- If author's profile has NOT been created -->
+            {% else %}
             <div class="guest">
                 <a href="{% url 'author_create' %}">Create Author's Profile</a>
             </div>
+            {% endif %}
         </nav>
     </header>
 </div>
