--- a/RegularExam/templates/author/delete-author.html
+++ b/RegularExam/templates/author/delete-author.html
@@ -8,7 +8,9 @@
                 <h1>You are about to delete your Author's Profile</h1>
                 <!-- Delete Author's Profile Form -->
 
-                <form id="delete" class="register-form" method="" action="">
+                <form id="delete" class="register-form" method="POST" action="">
+                    {% csrf_token %}
+                    {{ form }}
                     <!-- Confirm Button -->
                     <button type="submit">Confirm</button>
                 </form>
