--- a/RegularExam/templates/author/details-author.html
+++ b/RegularExam/templates/author/details-author.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-
+{% load static %}
 {% block content %}
     <main>
         <!-- Author's Profile Details Section -->
@@ -9,53 +9,56 @@
                 <h2>Author's Profile Details</h2>
 
                 <!-- if the author has provided a profile image link -->
-
-                <img
-                        id="details-img"
-                        src="https://cdn.pixabay.com/photo/2016/03/31/19/56/avatar-1295395_1280.png"
-                        alt="profile img"
-                />
-
-                <!-- if the author has NO profile image link -->
-                <img
-                        id="details-img"
-                        src="/images/default.png"
-                        alt="profile img"
-                />
-
+                {% if author.image_url %}
+                    <img
+                            id="details-img"
+                            src="{{ author.image_url }}"
+                            alt="profile img"
+                    />
+                {% else %}
+                    <!-- if the author has NO profile image link -->
+                    <img
+                            id="details-img"
+                            src="{% static 'images/default.png' %}"
+                            alt="profile img"
+                    />
+                {% endif %}
                 <!-- author's full name -->
-                <p id="details-title">Test User</p>
+                <p id="details-title">{{ author.first_name }} {{ author.last_name }}</p>
 
                 <!-- number of posts -->
-                <p id="nutrition">Published Posts: 3</p>
+                <p id="nutrition">Published Posts: {{ author.post_set.count }}</p>
 
                 <div id="info-wrapper">
                     <div id="details-description">
                         <!-- pets number -->
-                        <p>Pets Number: 4</p>
+                        <p>Pets Number: {{ author.pets_number }}</p>
 
                         <!-- info if provided, otherwise skip the line -->
-                        <p>Some funny info of me and all my pets</p>
-
+                        {% if author.info %}
+                            <p>{{ author.info }}</p>
+                        {% endif %}
                         <!-- Latest activity -->
-                        <p>-------------------------------</p>
-                        <!-- latest activity if there are posts: display the title of the last updated post -->
-                        <p>
-                            Last Updated Post:
-                            <strong>My cool fluffy rabbits</strong>
-                        </p>
-
-                        <!-- latest activity if there are NO posts -->
-                        <p>
-                            Last Updated Post:
-                            <strong>N/A</strong>
-                        </p>
+                        {% if author.post_set %}
+                            <p>{{ author.post_set.updated_at }}</p>
+                            <!-- latest activity if there are posts: display the title of the last updated post -->
+                            <p>
+                                Last Updated Post:
+                                <strong>{{ author.post_set.last.title }}</strong>
+                            </p>
+                        {% else %}
+                            <!-- latest activity if there are NO posts -->
+                            <p>
+                                Last Updated Post:
+                                <strong>N/A</strong>
+                            </p>
+                        {% endif %}
                     </div>
 
                     <!--Edit and Delete buttons -->
                     <div id="action-buttons">
-                        <a href="#" id="edit-btn">Edit</a>
-                        <a href="#" id="delete-btn">Delete</a>
+                        <a href="{% url 'author_edit' %}" id="edit-btn">Edit</a>
+                        <a href="{% url 'author_delete' %}" id="delete-btn">Delete</a>
                     </div>
                 </div>
             </div>
