--- a/RegularExam/templates/dashboard.html
+++ b/RegularExam/templates/dashboard.html
@@ -4,33 +4,35 @@
     <main>
         <!-- Dashboard page -->
         {% if posts %}
-        <!-- Display a heading if there are posts -->
-        <h2>Published Posts</h2>
+            <!-- Display a heading if there are posts -->
+            <h2>Published Posts</h2>
         {% else %}
-        <!-- Display a heading if there are NO posts -->
-        <h2>No published posts yet.</h2>
+            <!-- Display a heading if there are NO posts -->
+            <h2>No published posts yet.</h2>
         {% endif %}
 
-        {% for post in posts %}
-        <section id="dashboard">
-            <!-- Display a div with information about each post (if any) -->
+        {% if posts %}
+            {% for post in posts %}
+                <section id="dashboard">
+                    <!-- Display a div with information about each post (if any) -->
 
-            <!-- first post -->
-            <div class="post">
-                <!-- post image -->
-                <img
-                        src="{{ post.image_url }}"
-                        alt="My cool fluffy rabbits img"
-                />
-                <!-- post title -->
-                <h3 class="title">{{ post.title }}</h3>
-                <!-- post content -->
-                <p class="description">{{ post.content }}</p>
-                <!-- post details button -->
-                <a class="details-btn" href="{% url 'details_post' post.id %}">See More</a>
-            </div>
-        </section>
-        {% endfor %}
+                    <!-- first post -->
+                    <div class="post">
+                        <!-- post image -->
+                        <img
+                                src="{{ post.image_url }}"
+                                alt="My cool fluffy rabbits img"
+                        />
+                        <!-- post title -->
+                        <h3 class="title">{{ post.title }}</h3>
+                        <!-- post content -->
+                        <p class="description">{{ post.content }}</p>
+                        <!-- post details button -->
+                        <a class="details-btn" href="{% url 'details_post' post.id %}">See More</a>
+                    </div>
+                </section>
+            {% endfor %}
+        {% endif     %}
     </main>
 {% endblock %}
 
