--- a/RegularExam/templates/dashboard.html
+++ b/RegularExam/templates/dashboard.html
@@ -10,12 +10,9 @@
             <!-- Display a heading if there are NO posts -->
             <h2>No published posts yet.</h2>
         {% endif %}
-
-
-        {% for post in posts %}
             <section id="dashboard">
                 <!-- Display a div with information about each post (if any) -->
-
+                {% for post in posts %}
                 <!-- first post -->
                 <div class="post">
                     <!-- post image -->
@@ -26,13 +23,12 @@
                     <!-- post title -->
                     <h3 class="title">{{ post.title }}</h3>
                     <!-- post content -->
-                    <p class="description">{{ post.content }}</p>
+                    <p class="description">{{ post.content|truncatewords:3 }}</p>
                     <!-- post details button -->
                     <a class="details-btn" href="{% url 'details_post' post.id %}">See More</a>
                 </div>
+                {% endfor %}
             </section>
-        {% endfor %}
-
     </main>
 {% endblock %}
 
