--- a/Artonia_v2/templates/base.html
+++ b/Artonia_v2/templates/base.html
@@ -1,5 +1,5 @@
 {% load static %}
-{% load get_user %}
+{#{% load get_user %}#}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -22,18 +22,23 @@
 
         <nav>
             <!-- If there is a profile -->
-            {% get_user as profile %}
-            {% if profile %}
+{#            {% get_user as profile %}#}
+            {% if request.user.is_authenticated %}
                 <div class="user">
                     <a href="#">Dashboard</a>
-                    <a href="#">New Macrame</a>
+                    <a href="{% url 'create_macrame' %}">New Macrame</a>
                     <a href="#">New Art Painting</a>
                     <a href="#">Profile</a>
-                </div>
+                    {% if request.user.is_authenticated %}
+                        <a href="{% url 'logout' %}"
+                           onclick="event.preventDefault(); document.getElementById('logout-form').submit()">Logout</a>
+                        </div>
+                    {% endif %}
                 <!-- If profile has NOT been created -->
             {% else %}
                 <div class="guest">
-                    <a href="#">Create Profile</a>
+                    <a href="{% url 'login' %}">Login</a>
+                    <a href="{% url 'register' %}">Create Profile</a>
                 </div>
             {% endif %}
         </nav>
