--- a/Artonia_v2/templates/registration/login.html
+++ b/Artonia_v2/templates/registration/login.html
@@ -5,6 +5,6 @@
         {% csrf_token %}
         {{ form.as_p }}
         <button class="btn btn-primary ml-2">Login</button>
-        <p>Don't have an account? <a href="{% url 'register' %}">Register</a></p>
+        <p>Dont have an account? <a href="{% url 'register' %}">Register</a></p>
     </form>
 {% endblock %}
