--- a/Artonia_v2/templates/macrame/details-macrame.html
+++ b/Artonia_v2/templates/macrame/details-macrame.html
@@ -9,21 +9,21 @@
                 <!-- Macrame image -->
                 <img
                         id="details-img"
-                        src="#"
+                        src="{{ macrame.image_url }}"
                         alt="My clever dog :)"
                 />
                 <!-- macrame title -->
-                <p id="details-title">Great Title</p> 
+                <p id="details-title">{{ macrame.name }}</p> 
                 <div id="info-wrapper">
                     <div id="details-description">
                         <!-- macrame content -->
-                        <p>Macrame content to be added</p>
+                        <p>{{macrame.description}}</p>
                     </div>
 
                     <!--Edit and Delete buttons -->
                     <div id="action-buttons">
-                        <a href="{% url 'edit_macrame' macrame.id %}" id="edit-btn">Edit</a>
-                        <a href="{% url 'delete_macrame' macrame.id %}" id="delete-btn">Delete</a>
+                        <a href="{% url 'edit_macrame' macrame.pk %}" id="edit-btn">Edit</a>
+                        <a href="#" id="delete-btn">Delete</a>
                     </div>
                 </div>
             </div>
