Feature: Delete Macrame logic implemented

--- a/Artonia_v2/templates/macrame/details-macrame.html
+++ b/Artonia_v2/templates/macrame/details-macrame.html
@@ -23,7 +23,7 @@
                     <!--Edit and Delete buttons -->
                     <div id="action-buttons">
                         <a href="{% url 'edit_macrame' macrame.pk %}" id="edit-btn">Edit</a>
-                        <a href="#" id="delete-btn">Delete</a>
+                        <a href="{% url 'delete_macrame' macrame.pk %}" id="delete-btn">Delete</a>
                     </div>
                 </div>
             </div>
