--- a/Artonia_v2/templates/registration/login.html
+++ b/Artonia_v2/templates/registration/login.html
@@ -1,10 +1,16 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button class="btn btn-primary ml-2">Login</button>
-        <p>Dont have an account? <a href="{% url 'register' %}">Register</a></p>
-    </form>
+    <div class="login-form-container">
+        <form class='form-group' method="post">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <div class="button-container">
+                <button class="login-button">Login</button>
+            </div>
+            <p class="register-link">
+                Don't have an account? <a href="{% url 'register' %}">Register</a>
+            </p>
+        </form>
+    </div>
 {% endblock %}
