--- a/Artonia_v2/templates/registration/register.html
+++ b/Artonia_v2/templates/registration/register.html
@@ -1,9 +1,13 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <form method="post">
+    <form class="register-form-container" method="post">
         {% csrf_token %}
-        {{ form }}
-        <button class="btn btn-primary ml-2">Register</button>
+        <div class="form-group">
+            {{ form }}
+        </div>
+        <div class="button-container">
+            <button class="register-button">Register</button>
+        </div>
     </form>
 {% endblock %}
