--- a/RegularExam/static/styles/navigation.css
+++ b/RegularExam/static/styles/navigation.css
@@ -1,87 +1,200 @@
-@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap');
-body {
-  color:#5e514d;
-  background: rgb(255,249,205);
-  background: linear-gradient(120deg, rgb(206 255 167 / 49%) 0%, rgb(215 171 235 / 55%) 100%);
-  margin: auto;
-  padding: 0;
-  overflow: auto;
-  width: 97vw;
-  font-family: 'Dancing Script', cursive;
+*, *:after, *:before {
+    box-sizing: border-box;
 }
 
-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 0em 3em;
-  width: 90vw;
+ul.menu {
+    position: fixed;
+    font-family: "Roboto", sans-serif;
+    font-weight: 300;
+    font-style: normal;
+    left: 30px;
+    top: 20%;
+    list-style: none;
+    margin: 0;
+    width: 70px;
+    padding: 0;
+    margin-right: auto;
+    background-color: #05043e;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 0.75rem;
+    border-radius: 10px;
+    box-shadow: 0 10px 50px 0 rgba(5, 4, 62, 0.25);
 }
 
-nav {
- 
-  display: flex;
-  justify-content: space-between;
-  
+ul.menu li.menu-item:nth-child(6) {
+    margin-top: 5rem;
+    padding-top: 1.25rem;
+    border-top: 1px solid #363664;
 }
 
-
-#logo-img {
-  height: 80px;
- 
+ul.menu li.menu-item + li.menu-item {
+    margin-top: 0.75rem;
 }
 
-nav a {
-  font-size: 1.5rem;
-  color: #5e514d;
-  font-weight: 600;
+ul.menu a.menu-link {
+    color: #FFF;
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 3rem;
+    height: 3rem;
+    border-radius: 8px;
+    position: relative;
 }
 
-header a {
-  padding: 0 10px;
-  text-decoration: none;
-  
-  
-}
-nav a:hover {
-  color: rgb(153, 60, 7);
-  text-decoration: underline;
-  font-size: 1.7rem;
-
-  
+ul.menu a.menu-link:hover, ul.menu a.menu-link:focus, ul.menu a.menu-link.active {
+    background-color: #30305a;
+    outline: 0;
 }
 
-footer {
-  background-color: #f0f1e0;
-  color:  #5e514d;
-  font-weight: bolder;
-  text-align: center;
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 20px;
-}
-footer p {
-  margin-top:-1px;
+ul.menu a.menu-link:hover span, ul.menu a.menu-link:focus span, ul.menu a.menu-link.active span {
+    transform: scale(1);
+    opacity: 1;
 }
 
-
-
-#home img {
-  display: block;
-  margin: auto;
-  height: 25%;
-  width: 25%;
-  transform: rotate(20deg);
+ul.menu a.menu-link i {
+    font-size: 1.375rem;
 }
 
-#home h1 {
-  margin-top: 20px;
-  font-style: italic;
-  font-size: 60px;
-  font-weight: 600;
-  text-align: center;
-  color: rgb(153, 60, 7);
-  text-transform: capitalize;
+ul.menu a.menu-link span {
+    position: absolute;
+    background-color: #30305a;
+    font-family: "Roboto", sans-serif;
+    white-space: nowrap;
+    padding: 0.5rem 1rem;
+    border-radius: 6px;
+    left: calc(100% + 1.5rem);
+    transform-origin: center left;
+    transform: scale(0);
+    opacity: 0;
+    transition: 0.15s ease;
+}
+
+ul.menu a.menu-link span:before {
+    content: "";
+    display: block;
+    width: 12px;
+    height: 12px;
+    position: absolute;
+    background-color: #30305a;
+    left: -5px;
+    top: 50%;
+    transform: translatey(-50%) rotate(45deg);
+    border-radius: 3px;
+}
+
+details {
+    position: fixed;
+    right: 1rem;
+    bottom: 1rem;
+    margin-top: 2rem;
+    color: #05043e;
+    display: flex;
+    flex-direction: column;
+}
+
+details div {
+    background-color: #fff;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.15);
+    padding: 1.25rem;
+    border-radius: 8px;
+    position: absolute;
+    max-height: calc(100vh - 100px);
+    width: 400px;
+    max-width: calc(100vw - 2rem);
+    bottom: calc(100% + 1rem);
+    right: 0;
+    overflow: auto;
+    transform-origin: 100% 100%;
+}
+
+details div::-webkit-scrollbar {
+    width: 15px;
+    background-color: #fff;
+}
+
+details div::-webkit-scrollbar-thumb {
+    width: 5px;
+    border-radius: 99em;
+    background-color: #ccc;
+    border: 5px solid #fff;
+}
+
+details div > * + * {
+    margin-top: 0.75em;
+}
+
+details div p > code {
+    font-size: 1rem;
+    font-family: "Roboto", sans-serif;
+    color: #185adb;
+    font-weight: 600;
+}
+
+details div pre {
+    white-space: pre-line;
+    background-color: #f9f9f9;
+    border: 1px solid #95a3b9;
+    border-radius: 6px;
+    font-family: "Roboto", sans-serif;
+    padding: 0.75em;
+    font-size: 0.875rem;
+}
+
+details[open] div {
+    -webkit-animation: scale 0.25s ease;
+    animation: scale 0.25s ease;
+}
+
+summary {
+    display: inline-flex;
+    margin-left: auto;
+    margin-right: auto;
+    justify-content: center;
+    align-items: center;
+    font-weight: 600;
+    padding: 0.625em 1.25em 0.625em 1.25em;
+    border-radius: 99em;
+    color: #fff;
+    background-color: #185adb;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+    list-style: none;
+    text-align: center;
+    cursor: pointer;
+    transition: 0.15s ease;
+    position: relative;
+}
+
+summary::-webkit-details-marker {
+    display: none;
+}
+
+summary:hover, summary:focus {
+    background-color: #1348af;
+}
+
+summary i {
+    font-size: 1.375em;
+    margin-left: 0;
+}
+
+@-webkit-keyframes scale {
+    0% {
+        transform: scale(0);
+    }
+    100% {
+        transform: scale(1);
+    }
+}
+
+@keyframes scale {
+    0% {
+        transform: scale(0);
+    }
+    100% {
+        transform: scale(1);
+    }
 }
