--- a/Artonia_v2/templates/base.html
+++ b/Artonia_v2/templates/base.html
@@ -24,7 +24,7 @@
                 <div class="user">
                     <a href="{% url 'dashboard' %}">Dashboard</a>
                     <a href="{% url 'create_macrame' %}">New Macrame</a>
-                    <a href="#">New Art Painting</a>
+                    <a href="{% url 'create-art-painting' %}">New Art Painting</a>
                     <a href="#">Profile</a>
 
                     <!-- Logout Link -->
