--- a/Artonia_v2/static/styles/dashboard.css
+++ b/Artonia_v2/static/styles/dashboard.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
 :root {
-  --white-color: rgba(255, 0, 0, 0);
+  --white-color: #ffffff;
   --h2-color: rgb(240, 156, 47);
   --card-background: rgb(124, 112, 102);
   --card-box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
