Feature: Details and Edit Profile logic implemented

--- a/Artonia_v2/static/styles/form.css
+++ b/Artonia_v2/static/styles/form.css
@@ -61,7 +61,6 @@
 
 }
 .form button {
-  /*font-family: 'Alkalami', serif;*/
   font-family: 'Kaushan Script', cursive;
   text-transform: uppercase;
   outline: 0;
@@ -107,7 +106,7 @@
 
 #search .form h2{
 margin-top:-40px;
-margin-bottom: 0px;
+margin-bottom: 0;
   font-size: 30px;
   /* color: #ffffff; */
   color: rgb(190, 103, 2);
