--- a/Artonia_v2/static/styles/details.css
+++ b/Artonia_v2/static/styles/details.css
@@ -58,8 +58,7 @@ span {
 
 #action-buttons a {
     text-decoration: none;
-    margin: auto 50px;
-    margin-bottom: 10px;
+    margin: auto 50px 10px;
     font-size: 21px;
     width: 130px;
     text-align: center;
