--- a/Artonia_v2/templates/dashboard.html
+++ b/Artonia_v2/templates/dashboard.html
@@ -24,10 +24,11 @@
                     />
                     <!-- Macrame title -->
                     <h3 class="title">{{ macrame.name }}</h3>
+                    <h3 class="title" style="color: #ffb700">$ {{ macrame.price }}</h3>
                     <!-- macrame description -->
                     <p class="description">{{ macrame.description|truncatewords:10 }}</p>
                     <!-- post details button -->
-                    <a class="details-btn" href="{% url 'details_macrame' macrame.id %}">See More</a>
+                    <a class="details-btn" href="{% url 'details_macrame' macrame.pk %}">See More</a>
                 </div>
             {% endfor %}
         </section>
@@ -53,10 +54,11 @@
                     />
                     <!-- Art Painting title -->
                     <h3 class="title">{{ art.name }}</h3>
+                    <h3 class="title" style="color: #ffb700">$ {{ art.price }}</h3>
                     <!-- Art description -->
                     <p class="description">{{ art.description|truncatewords:10 }}</p>
                     <!-- Art details button -->
-                    <a class="details-btn" href="">See More</a>
+                    <a class="details-btn" href="{% url 'details_art-painting' art.pk %}">See More</a>
                 </div>
             {% endfor %}
         </section>
