Feature: Workshop creation and Workshop list + CSS stylesheet created

--- a/Artonia_v2/static/styles/dashboard.css
+++ b/Artonia_v2/static/styles/dashboard.css
@@ -83,7 +83,7 @@
   width: 90%;
   text-align: center;
   color: var(--white-color);
-  font-family: 'Alkalami', serif;
+  font-family: serif;
 }
 
 .post h3 {
