--- a/Artonia_v2/templates/base.html
+++ b/Artonia_v2/templates/base.html
@@ -15,7 +15,8 @@
     <header>
         <!-- Logo image: link to index/home page -->
         <a id="logo" href="{% url 'home' %}">
-            <img id="logo-img" src="{% static 'images/Artonia Circle Logo_2.JPG' %}" alt="logo"/>Artonia
+            <img id="logo-img" src="{% static 'images/Artonia Circle Logo_2.JPG' %}" alt="logo">
+            <span class="logo-text">Artonia</span>
             <!-- Update this path to your actual logo image -->
         </a>
 
@@ -26,6 +27,7 @@
                     <a href="{% url 'dashboard' %}">Dashboard</a>
                     <a href="{% url 'create_macrame' %}">New Macrame</a>
                     <a href="{% url 'create-art-painting' %}">New Art Painting</a>
+                    <a href="{% url 'workshop-list' %}">Workshops</a>
                     <a href="{% url 'user_details' user.pk %}">Profile</a>
 
                     <!-- Logout Link -->
@@ -54,7 +56,7 @@
             {% endblock %}
         </div>
     </div>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
 </div>
 
 <!-- Footer -->
