--- a/Artonia_v2/templates/workshops/workshop_list.html
+++ b/Artonia_v2/templates/workshops/workshop_list.html
@@ -3,12 +3,11 @@
 
 {% block content %}
     <div class="workshops-header">
-        <h1>Available Workshops</h1>
+
         {% if user.is_authenticated %}
-            <a href="{% url 'workshop-create' %}" class="create-button">Create New Workshop</a>
+                <h1>Available Workshops</h1> <span><a href="{% url 'workshop-create' %}" class="create-button">Create New Workshop</a></span>
         {% endif %}
     </div>
-
     <div class="workshops-grid">
         {% for workshop in workshops %}
             <div class="workshop-card">
@@ -25,7 +24,7 @@
                         <li>Price: ${{ workshop.price }}</li>
                         <li>Available Spots: {{ workshop.capacity }}</li>
                     </ul>
-                    <a href="#" class="view-button">View Details</a>
+                    <a href="{% url 'workshop-detail' workshop.pk %}" class="view-button">View Details</a>
                 </div>
             </div>
         {% empty %}
